--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.0"
     "@clerk/nextjs": "^6.2.1",
     "@clerk/themes": "^2.1.41",
     "@dnd-kit/core": "^6.1.0",
