--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.0.0",
+    "@vercel/analytics": "^1.0.0",
     "@clerk/nextjs": "^6.2.1",
     "@clerk/themes": "^2.1.41",
     "@dnd-kit/core": "^6.1.0",
